syntax  = "proto3";

package pb;


enum ReceiverType {
    RT_UNKNOWN = 0;
    RT_USER = 1;
    RT_GROUP = 2;
}


enum SenderType {
    ST_UNKNOWN = 0;
    ST_SYSTEM = 1;
    ST_USER = 2;
    ST_BUSINESS = 3;
}

enum MessageStatus {
    MS_UNKNOWN = 0;
    MS_NORMAL = 1;
    MS_RECALL = 2;
}


enum PushCode {
    PC_ADD_DEFAULT = 0;
}

// 包类型
enum PackageType {
    PT_UNKNOWN = 0; // 未知
    PT_SIGN_IN = 1; // 设备登录请求
    PT_SYNC = 2; // 消息同步触发
    PT_HEARTBEAT = 3; // 心跳
    PT_MESSAGE = 4; // 消息投递
}

// 消息类型
enum MessageType {
    MT_UNKNOWN = 0; // 未知
    MT_TEXT = 1; // 文本
    MT_FACE = 2; // 表情
    MT_VOICE = 3; // 语音消息
    MT_IMAGE = 4; // 图片
    MT_FILE = 5; // 文件
    MT_LOCATION = 6; // 地理位置
    MT_COMMAND = 7; // 指令推送
    MT_CUSTOM = 8; // 自定义
}